@@ -34,4 +34,11 @@
 # 
 # I still need to add some custom columns but I have not decided if I need to design a config program  in a window...
 #
-# I have to decide how to give me the possiblity to choose what volume I want in calibre...
+# I have to decide how to give me the possiblity to choose what volume I want in calibre... 
+#     de preference, metadata download, (tickbox) Keep more than one entry per source, read comment: 
+"Disable any metadata sources you do not want by unchecking them. You can also set the cover priority. 
+Covers from sources that have a higher (smaller) priority will be preferred when bulk downloading metadata.". 
+# Could I have lrpid to differenciate different volumes of a same book?? 
+#
+# ouch... mauvaise surprise, noosfere trouve beaucoup trop d'auteur correspondant a "G.-J. Arnaud"...
+# meme en recherche exacte... on obtient 84 réponses avec la meme pertinence de 160...
